--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -4,126 +4,162 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Fast Education — English Exam</title>
+<title>Fast Education — English Language Assessment</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=DM+Sans:wght@300;400;500;600;700&family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
 
-<!-- 1 · WELCOME -->
-<section id="v-welcome" class="scene on">
-  <div class="glass-card welcome-box">
-    <div class="icon-circle"><svg width="32" height="32" fill="none" stroke="#6366f1" stroke-width="1.6" viewBox="0 0 24 24"><path d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"/></svg></div>
-    <h1>Fast Education</h1>
-    <p class="muted">English Language Proficiency Exam</p>
-    <input id="inp-name" class="field" type="text" placeholder="Enter your full name" autocomplete="off">
-    <button id="btn-go" class="btn btn-lg btn-grad" disabled>Start Exam →</button>
-  </div>
-</section>
-
-<!-- 2 · OVERVIEW -->
-<section id="v-overview" class="scene">
-  <div class="glass-card overview-box">
-    <div class="icon-circle"><svg width="32" height="32" fill="none" stroke="#6366f1" stroke-width="1.6" viewBox="0 0 24 24"><path d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"/></svg></div>
-    <h1>Test Overview</h1>
-    <p class="muted">This exam has the following sections</p>
-    <div id="ov-list" class="ov-list"></div>
-    <div class="ov-meta"><span id="ov-count">0 questions</span><span>≈ 30 min</span></div>
-    <button id="btn-begin" class="btn btn-lg btn-grad">Begin Test →</button>
-  </div>
-</section>
-
-<!-- 3 · SECTION COMPLETE -->
-<section id="v-section" class="scene">
-  <div class="glass-card overview-box">
-    <h1>Section Complete!</h1>
-    <p class="muted" id="sec-msg">You've finished the Grammar section.</p>
-    <div id="sec-list" class="ov-list"></div>
-    <button id="btn-continue" class="btn btn-lg btn-grad">Continue to Next Section →</button>
-  </div>
-</section>
-
-<!-- 4 · EXAM -->
-<section id="v-exam" class="scene">
-  <header class="bar">
-    <div class="bar-brand">
-      <svg width="22" height="22" fill="none" stroke="currentColor" stroke-width="1.6" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/></svg>
-      Fast Education
+<!-- ═══ 1. REGISTRATION ═══ -->
+<section id="v-register" class="scene active">
+  <div class="register-page">
+    <div class="register-left">
+      <div class="reg-bg-shapes">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+      </div>
+      <div class="brand-block">
+        <div class="brand-logo">
+          <img src="{% static 'images/logo.png' %}" alt="Fast Education" class="logo-img">
+        </div>
+        <h1 class="brand-name">Fast<br>Education</h1>
+        <p class="brand-tagline">English Language Assessment Centre</p>
+      </div>
     </div>
-    <div class="bar-progress"><div class="bar-track"><div class="bar-fill" id="bar-fill"></div></div></div>
-    <div class="bar-meta">
-      <span id="user-lbl" class="bar-user"></span>
-      <span class="bar-timer">
-        <svg width="14" height="14" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
-        <b id="timer-t">00:00</b>
-      </span>
+    <div class="register-right">
+      <div class="register-card">
+        <h2>Ro'yxatdan o'tish <span class="sub-ru">/ Регистрация</span></h2>
+        <p class="form-hint">Imtihonni boshlash uchun ma'lumotlaringizni kiriting<br><span class="ru">Введите данные для начала экзамена</span></p>
+        <div class="form-row">
+          <div class="fg">
+            <label for="inp-first">Ism / <span class="ru">Имя</span></label>
+            <input type="text" id="inp-first" placeholder="Ismingiz / Ваше имя" autocomplete="off">
+          </div>
+          <div class="fg">
+            <label for="inp-last">Familiya / <span class="ru">Фамилия</span></label>
+            <input type="text" id="inp-last" placeholder="Familiyangiz / Ваша фамилия" autocomplete="off">
+          </div>
+        </div>
+        <div class="form-sep">O'qituvchi / <span class="ru">Учитель</span></div>
+        <div class="form-row">
+          <div class="fg">
+            <label for="inp-tfirst">O'qituvchi ismi / <span class="ru">Имя учителя</span></label>
+            <input type="text" id="inp-tfirst" placeholder="O'qituvchi ismi" autocomplete="off">
+          </div>
+          <div class="fg">
+            <label for="inp-tlast">Familiyasi / <span class="ru">Фамилия</span></label>
+            <input type="text" id="inp-tlast" placeholder="O'qituvchi familiyasi" autocomplete="off">
+          </div>
+        </div>
+        <button id="btn-register" class="btn-primary" disabled>
+          <span>Boshlash / Начать</span>
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ═══ 2. LEVEL SELECTION ═══ -->
+<section id="v-levels" class="scene">
+  <nav class="top-nav">
+    <div class="nav-brand">Fast Education</div>
+    <div class="nav-user" id="nav-user"></div>
+  </nav>
+  <div class="page-wrap">
+    <div class="page-head">
+      <h1>Darajangizni tanlang / <span class="ru">Выберите уровень</span></h1>
+      <p>Mos darajani tanlang va testlarni boshlang / <span class="ru">Выберите подходящий уровень и начните тесты</span></p>
+    </div>
+    <div id="levels-grid" class="levels-grid"></div>
+  </div>
+</section>
+
+<!-- ═══ 3. MONTH SELECTION ═══ -->
+<section id="v-months" class="scene">
+  <nav class="top-nav">
+    <div class="nav-brand">Fast Education</div>
+    <div class="nav-user" id="nav-user2"></div>
+  </nav>
+  <div class="page-wrap">
+    <button class="back-link" id="btn-back-levels">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M19 12H5M12 19l-7-7 7-7"/></svg>
+      Ortga / Назад
+    </button>
+    <div class="month-header" id="month-header">
+      <div class="month-icon" id="month-icon"></div>
+      <div>
+        <h1 id="month-level-name"></h1>
+        <p>Oy tanlang va testlarni boshlang / <span class="ru">Выберите месяц и начните тесты</span></p>
+      </div>
+    </div>
+    <div id="months-grid" class="months-grid"></div>
+  </div>
+</section>
+
+<!-- ═══ 4. EXAM ═══ -->
+<section id="v-exam" class="scene">
+  <header class="exam-bar">
+    <div class="eb-left">
+      <div class="eb-brand">Fast Education</div>
+      <span class="eb-badge" id="exam-badge"></span>
+    </div>
+    <div class="eb-progress">
+      <div class="eb-track"><div class="eb-fill" id="bar-fill"></div></div>
+    </div>
+    <div class="eb-right">
+      <span class="eb-user" id="user-lbl"></span>
+      <span class="eb-timer" id="timer-t">00:00</span>
     </div>
   </header>
-  <main class="stage">
+  <main class="exam-stage">
     <div class="q-card" id="q-card">
-      <span class="q-tag" id="q-tag"></span>
-      <p class="q-sub" id="q-sub"></p>
+      <div class="q-top">
+        <span class="q-tag" id="q-tag"></span>
+        <span class="q-num" id="q-num"></span>
+      </div>
+      <p class="q-inst" id="q-sub"></p>
       <h2 class="q-title" id="q-title"></h2>
       <div id="q-body"></div>
     </div>
     <div class="nav-row">
-      <button class="btn btn-ghost" id="nav-prev" disabled>← Previous</button>
-      <button class="btn btn-grad" id="nav-next">Next →</button>
-      <button class="btn btn-green" id="nav-submit" hidden>Submit Exam ✓</button>
+      <button class="btn-ghost" id="nav-prev" disabled>&#8592; Oldingi / Назад</button>
+      <button class="btn-primary" id="nav-next">Keyingi / Далее &#8594;</button>
+      <button class="btn-submit" id="nav-submit" hidden>Topshirish / Сдать</button>
     </div>
   </main>
   <footer class="dots-bar" id="dots-bar"></footer>
 </section>
 
-<!-- 5 · RESULTS -->
+<!-- ═══ 5. RESULTS ═══ -->
 <section id="v-results" class="scene">
-  <div class="result-box">
-    <h1>Exam Complete</h1>
-    <p class="muted" id="res-name"></p>
-
-    <div class="ring-wrap">
-      <div class="ring" id="ring"><span class="ring-val" id="ring-val">0%</span><span class="ring-lbl">Score</span></div>
-      <div class="ring-stats">
-        <div><b id="rs-correct">0</b><small>Correct</small></div>
-        <div><b id="rs-total">0</b><small>Gradable</small></div>
-        <div><b id="rs-time">00:00</b><small>Time</small></div>
+  <div class="res-wrap">
+    <div class="res-header">
+      <img src="{% static 'images/logo.png' %}" alt="FE" class="res-logo-img">
+      <h1>Natijalar / <span class="ru">Результаты</span></h1>
+      <p id="res-name"></p>
+    </div>
+    <div class="score-card">
+      <div class="ring" id="ring">
+        <span class="ring-val" id="ring-val">0%</span>
+        <span class="ring-lbl">Ball / Балл</span>
+      </div>
+      <div class="score-stats">
+        <div class="ss"><b id="rs-correct">0</b><small>To'g'ri / Правильно</small></div>
+        <div class="ss"><b id="rs-total">0</b><small>Jami / Всего</small></div>
+        <div class="ss"><b id="rs-time">00:00</b><small>Vaqt / Время</small></div>
       </div>
     </div>
-
-    <div id="ai-box" class="ai-box" hidden>
-      <div class="ai-title">⚠️ AI Usage Detected</div>
-      <div id="ai-list"></div>
-      <p class="ai-note">This has been recorded and may affect your grade.</p>
+    <div class="res-actions">
+      <button class="btn-cert" id="btn-cert" onclick="openCert()">📄 Sertifikat / Сертификат</button>
+      <button class="btn-primary" onclick="location.reload()">Boshqa test / Новый тест</button>
     </div>
-    <div id="clean-box" class="clean-box" hidden>
-      ✅ <strong>No AI usage detected</strong> — All work appears to be your own.
-    </div>
-
-    <!-- Review buttons per category -->
-    <div class="review-tabs" id="review-tabs"></div>
-
-    <!-- Detailed review -->
+    <div class="rev-tabs" id="review-tabs"></div>
     <div id="review-area"></div>
-
-    <div class="res-btns">
-      <button class="btn btn-grad" onclick="location.reload()">Take Again</button>
-      <button class="btn btn-ghost" onclick="window.print()">Print Results</button>
-    </div>
   </div>
 </section>
-
-<!-- Review Modal -->
-<div id="review-modal" class="modal" hidden>
-  <div class="modal-content">
-    <div class="modal-head">
-      <h2 id="modal-title">Grammar Review</h2>
-      <p class="muted" id="modal-sub">A detailed review of your answers.</p>
-      <button class="modal-close" id="modal-close">✕</button>
-    </div>
-    <div id="modal-body"></div>
-  </div>
-</div>
 
 <script src="{% static 'js/app.js' %}"></script>
 </body>
